objects/Account.object
<CustomObject>
    <fields>
        <fullName>ASIC_Business_Flag__c</fullName>
        <formula>IF( ISPICKVAL( Authorized_for_ASIC_business__c ,&apos;Yes&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ASIC Business Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASIC_Flag_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ASIC Flag Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FV2: User from account team proxy with role as account admin</description>
        <label>Account Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Alias_Change_Request__c</fullName>
        <label>Account Alias Change Request</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Details_Change_By_Trigger__c</fullName>
        <label>Account Details Change By Trigger</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Header_Readiness_Authorized__c</fullName>
        <formula>IF(Account_Header_Readiness_Qualified__c == &quot;TRUE&quot;, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <label>Account Header Readiness (Authorized)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Header_Readiness_Qualified__c</fullName>
        <formula>IF( 
AND( 
NOT(ISBLANK(Short_Name__c)) 
, NOT(ISPICKVAL(Account_Profile__c, &quot;&quot;)) 
, NOT(ISPICKVAL(Sub_Type__c, &quot;&quot;))
, NOT(ISPICKVAL(Process_Tech_Interested__c, &quot;&quot;))  
, NOT(ISPICKVAL(Fab_9_10__c, &quot;&quot;))
) 
, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <label>Account Header Readiness (Qualified)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Header_Readiness__c</fullName>
        <formula>IF (Account_Header_Readiness_Authorized__c == &quot;TRUE&quot;, IMAGE (&quot;resource/Account_Progress_3&quot;, &quot;&quot;, 30, 65) + &quot;Authorized Ready&quot;, 
IF (Account_Header_Readiness_Qualified__c == &quot;TRUE&quot;, IMAGE (&quot;resource/Account_Progress_2&quot;, &quot;&quot;, 30, 65) + &quot;Ready for Qualified&quot;, IMAGE (&quot;resource/Account_Progress_1&quot;, &quot;&quot;, 30, 65) + &quot;Not Ready&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Please fill up the following Account Header Information:
-  Short Name
-  Account Profile
-  Process Tech. Interested
-  Backup Customer Service Rep
-  Primary Field Technical Support
-  Primary Customer Service Rep
-  At least 1 Contact</inlineHelpText>
        <label>Account Header Readiness</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Info_Readiness_Authorized__c</fullName>
        <formula>IF( 
AND( 
Account_Info_Readiness_Qualified__c == &quot;TRUE&quot; 
, NOT(ISPICKVAL(Target_Account__c, &quot;&quot;)) 
, NOT(ISPICKVAL(Revenue_Potential__c, &quot;&quot;)) 
) 
, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <label>Account Info Readiness (Authorized)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Info_Readiness_Qualified__c</fullName>
        <formula>IF( 
NOT(ISBLANK(Market_Segment__c)) 
, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <label>Account Info Readiness (Qualified)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Information_Readiness__c</fullName>
        <formula>IF (Account_Info_Readiness_Authorized__c == &quot;TRUE&quot;, IMAGE (&quot;resource/Account_Progress_3&quot;, &quot;&quot;, 30, 65) + &quot;Authorized Ready&quot;, 
IF (Account_Info_Readiness_Qualified__c == &quot;TRUE&quot;, IMAGE (&quot;resource/Account_Progress_2&quot;, &quot;&quot;, 30, 65) + &quot;Ready for Qualified&quot;, IMAGE (&quot;resource/Account_Progress_1&quot;, &quot;&quot;, 30, 65) + &quot;Not Ready&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Please fill up the following Account Information:
-  Market Segment
-  End Customer
-  Sweet Sixteen (Admin)
-  Customer Service Level (CSL)
-  Target Account (MKTG)
-  Revenue Potential (MKTG)</inlineHelpText>
        <label>Account Information Readiness</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FV2: Account Team member with role Account Manager</description>
        <label>Primary Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name_Change_Request__c</fullName>
        <label>Account Name Change Request</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Site__c</fullName>
        <description>This is used for the Account Name/Site Validations</description>
        <formula>Name &amp;  Site_Department__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name/Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>IF( CONTAINS(Name, &apos;ADVANCED MICRO DEVICES&apos;) , &apos;AMD&apos;,  IF(CONTAINS(Name, &apos;BROADCOM&apos;) , &apos;Broadcom&apos;,  IF( CONTAINS(Name, &apos;QUALCOMM&apos;) , &apos;Qualcomm&apos;, &apos;Others&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Present_In_OT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cognizant (FV 2.0):This field indicates whether Account is present in Open Text</description>
        <label>Account Present In OT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Profile__c</fullName>
        <inlineHelpText>Choose the Account Profile that best describe the Customer</inlineHelpText>
        <label>Account Profile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fabless - Emerging</fullName>
                </value>
                <value>
                    <fullName>Fabless - Medium (&gt;$10M SAM)</fullName>
                </value>
                <value>
                    <fullName>Fabless - Large (&gt;$100M SAM)</fullName>
                </value>
                <value>
                    <fullName>IDM FabLite - (&gt;50%outsourced)</fullName>
                </value>
                <value>
                    <fullName>IDM - (&lt;50% outsources)</fullName>
                </value>
                <value>
                    <fullName>System - (end-product manu.)</fullName>
                </value>
                <value>
                    <fullName>Reseller - (Channel and ASIC)</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Submission_Readiness_Qualified__c</fullName>
        <formula>IF( 
AND( 
NOT(ISBLANK(Short_Name__c)) 
, NOT(ISPICKVAL(Account_Profile__c, &quot;&quot;)) 
, NOT(ISPICKVAL(Sub_Type__c, &quot;&quot;)) 
, NOT(ISBLANK(Market_Segment__c)) 
, NOT(ISPICKVAL(Sales_Territory__c, &quot;&quot;)) 
, NOT(ISBLANK(Total_Employee__c)) 
, NOT(ISBLANK(Bill_To_Address_1__c)) 
, NOT(ISBLANK(Bill_To_City__c)) 
, NOT(ISPICKVAL(Bill_To_Country__c, &quot;&quot;))
, NOT(ISPICKVAL(Process_Tech_Interested__c, &quot;&quot;))  
) 
, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <label>Account Submission Readiness (Qualified)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Submission_Readiness__c</fullName>
        <formula>IF (Acct_Submission_Readiness_Authorized__c == &quot;TRUE&quot;, IMAGE (&quot;resource/Account_Progress_3&quot;, &quot;&quot;, 30, 65) + &quot;Authorized Ready&quot;, 
IF (Account_Submission_Readiness_Qualified__c == &quot;TRUE&quot;, IMAGE (&quot;resource/Account_Progress_2&quot;, &quot;&quot;, 30, 65) + &quot;Ready for Qualified&quot;, IMAGE (&quot;resource/Account_Progress_1&quot;, &quot;&quot;, 30, 65) + &quot;Not Ready&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Submission Readiness</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Enablement Partner</fullName>
                </value>
                <value>
                    <fullName>GLOBALFOUNDRIES Internal</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>Suppliers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acct_Submission_Readiness_Authorized__c</fullName>
        <formula>IF( 
AND( 
Account_Submission_Readiness_Qualified__c == &quot;TRUE&quot; 
, NOT(ISBLANK(End_Customer__c)) 
, NOT(ISPICKVAL(Target_Account__c, &quot;&quot;)) 
, NOT(ISPICKVAL(Revenue_Potential__c, &quot;&quot;)) 
, NOT(ISPICKVAL(Invoice_Term__c, &quot;&quot;)) 
, NOT(ISBLANK(Organization_Unit__c)) 
, NOT(ISBLANK(Bill_To_Location__c)) 
, No_of_Contacts__c &gt; 0 
, Backup_Customer_Service_Rep__c &gt; 0 
, Primary_Field_Engineer__c &gt; 0 
, Primary_Account_Manager__c &gt; 0
, Primary_Customer_Service_Rep__c &gt; 0 
) 
, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <label>Acct Submission Readiness (Authorized)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Info_Readiness_Authorized__c</fullName>
        <formula>IF( 
NOT(ISBLANK(Total_Employee__c)) 
, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <label>Additional Info Readiness (Authorized)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Info_Readiness_Qualified__c</fullName>
        <formula>IF( 
NOT(ISBLANK(Total_Employee__c)) 
, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <label>Additional Info Readiness (Qualified)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Information_Readiness__c</fullName>
        <formula>IF (Additional_Info_Readiness_Authorized__c == &quot;TRUE&quot;, IMAGE (&quot;resource/Account_Progress_3&quot;, &quot;&quot;, 30, 65) + &quot;Authorized Ready&quot;, IMAGE (&quot;resource/Account_Progress_1&quot;, &quot;&quot;, 30, 65) + &quot;Not Ready&quot;)</formula>
        <inlineHelpText>Please fill up the following Additional Information: 
-  Total Employee</inlineHelpText>
        <label>Additional Information Readiness</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aggmt_Exp_to_Google__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for GF-NDA app to hide aggrements related to this account</description>
        <label>Aggrements Exposed to Google</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aggregated_SAM_USD__c</fullName>
        <label>Aggregated SAM USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <label>Alias</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Request__c</fullName>
        <inlineHelpText>Approval Request Type is Required when the fields Bill to Address, Location, Account Name, Region are being changed.</inlineHelpText>
        <label>Approval Request</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Stage__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Promote to Qualified</fullName>
                </value>
                <value>
                    <fullName>Promote to Authorized</fullName>
                </value>
                <value>
                    <fullName>Change Direct to Indirect</fullName>
                </value>
                <value>
                    <fullName>Change Indirect to Direct</fullName>
                </value>
                <value>
                    <fullName>Inactivate Account</fullName>
                </value>
                <value>
                    <fullName>Account Details Change</fullName>
                </value>
                <value>
                    <fullName>Reactivate Account</fullName>
                </value>
                <value>
                    <fullName>Invoice Term Change</fullName>
                </value>
                <value>
                    <fullName>Ship To Address Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingContactFilterCriteria__c</fullName>
        <description>Filter criteria to select billing contacts for the account or the comma separated list of email Ids to send billing statements.</description>
        <inlineHelpText>Filter criteria to select billing contacts for the account or the comma separated list of email Ids to send billing statements.</inlineHelpText>
        <label>Billing Contact Filter Criteria</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingContactFormat__c</fullName>
        <description>Specifies Billing Contact setup format for a given account.</description>
        <inlineHelpText>Specifies Billing Contact setup format for a given account.</inlineHelpText>
        <label>Billing Contact Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Comma Separated Values</fullName>
                </value>
                <value>
                    <fullName>Filter Criteria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingDayOfMonth__c</fullName>
        <description>The billing day of month for the account. Specific Day of Month, End of Month, etc</description>
        <inlineHelpText>The billing day of month for the account. Specific Day of Month, End of Month, etc</inlineHelpText>
        <label>Billing Day Of Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st of the Month</fullName>
                    <default>true</default>
                    <label>1st of the Month</label>
                </value>
                <value>
                    <fullName>2nd of the Month</fullName>
                </value>
                <value>
                    <fullName>3rd of the Month</fullName>
                </value>
                <value>
                    <fullName>4th of the Month</fullName>
                </value>
                <value>
                    <fullName>5th of the Month</fullName>
                </value>
                <value>
                    <fullName>6th of the Month</fullName>
                </value>
                <value>
                    <fullName>7th of the Month</fullName>
                </value>
                <value>
                    <fullName>8th of the Month</fullName>
                </value>
                <value>
                    <fullName>9th of the Month</fullName>
                </value>
                <value>
                    <fullName>10th of the Month</fullName>
                </value>
                <value>
                    <fullName>11th of the Month</fullName>
                </value>
                <value>
                    <fullName>12th of the Month</fullName>
                </value>
                <value>
                    <fullName>13th of the Month</fullName>
                </value>
                <value>
                    <fullName>14th of the Month</fullName>
                </value>
                <value>
                    <fullName>15th of the Month</fullName>
                </value>
                <value>
                    <fullName>16th of the Month</fullName>
                </value>
                <value>
                    <fullName>17th of the Month</fullName>
                </value>
                <value>
                    <fullName>18th of the Month</fullName>
                </value>
                <value>
                    <fullName>19th of the Month</fullName>
                </value>
                <value>
                    <fullName>20th of the Month</fullName>
                </value>
                <value>
                    <fullName>21st of the Month</fullName>
                </value>
                <value>
                    <fullName>22nd of the Month</fullName>
                </value>
                <value>
                    <fullName>23rd of the Month</fullName>
                </value>
                <value>
                    <fullName>24th of the Month</fullName>
                </value>
                <value>
                    <fullName>25th of the Month</fullName>
                </value>
                <value>
                    <fullName>26th of the Month</fullName>
                </value>
                <value>
                    <fullName>27th of the Month</fullName>
                </value>
                <value>
                    <fullName>28th of the Month</fullName>
                </value>
                <value>
                    <fullName>29th of the Month</fullName>
                </value>
                <value>
                    <fullName>30th of the Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingPreferenceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing preference</description>
        <inlineHelpText>ID of the associated billing preference</inlineHelpText>
        <label>Billing Preference</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__BillingPreference__c.Apttus_Config2__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Please select a billing preference</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__BillingPreference__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CalendarCycleStart__c</fullName>
        <description>Indicates which calendar month the billing cycle will align to for a given account.</description>
        <inlineHelpText>Indicates which calendar month the billing cycle will align to for a given account.</inlineHelpText>
        <label>Calendar Cycle Start</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CertificateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated tax certificate. Applicable only when tax exempt.</description>
        <inlineHelpText>ID of the associated tax certificate. Applicable only when tax exempt.</inlineHelpText>
        <label>Tax Certificate</label>
        <referenceTo>Apttus_Config2__TaxCertificate__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CreditMemoEmailTemplate__c</fullName>
        <description>Specifies the current selected Credit Memo Email Template of an account.</description>
        <inlineHelpText>Specifies the current selected Credit Memo Email Template of an account.</inlineHelpText>
        <label>Credit Memo Email Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultCreditMemoTemplate__c</fullName>
        <description>The name of the default Credit Memo template for generating Credit Memo documents</description>
        <inlineHelpText>The name of the default Credit Memo template for generating Credit Memo documents</inlineHelpText>
        <label>Default Credit Memo Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultInvoiceStatementTemplate__c</fullName>
        <description>The name of the default template for generating invoice statements</description>
        <inlineHelpText>The name of the default template for generating invoice statements</inlineHelpText>
        <label>Default Invoice Statement Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultInvoiceTemplate__c</fullName>
        <description>The name of the default invoice template for generating invoices</description>
        <inlineHelpText>The name of the default invoice template for generating invoices</inlineHelpText>
        <label>Default Invoice Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InvoiceEmailTemplate__c</fullName>
        <description>Specifies the current selected Invoice Email Template for a given account.</description>
        <inlineHelpText>Specifies the current selected Invoice Email Template for a given account.</inlineHelpText>
        <label>Invoice Email Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PaymentTermId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the default payment term associated with the account</description>
        <inlineHelpText>ID of the default payment term associated with the account</inlineHelpText>
        <label>Payment Term</label>
        <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxExemptStatus__c</fullName>
        <description>The tax exempt status. Applicable only when tax exempt.</description>
        <inlineHelpText>The tax exempt status. Applicable only when tax exempt.</inlineHelpText>
        <label>Tax Exempt Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus_Config2__TaxExempt__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxExempt__c</fullName>
        <description>The tax exempt indicator for the account</description>
        <inlineHelpText>The tax exempt indicator for the account</inlineHelpText>
        <label>Tax Exempt ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Authorized_Approval_Date__c</fullName>
        <label>Authorized Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Authorized_for_ASIC_business__c</fullName>
        <inlineHelpText>Select Yes allows customer to be provisioned with ASIC IP, Specifications and Design Kit</inlineHelpText>
        <label>Authorized for ASIC business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backup_Customer_Service_Rep__c</fullName>
        <label>Backup Customer Service Rep</label>
        <summaryFilterItems>
            <field>Account_Team_Proxy__c.Team_Role__c</field>
            <operation>equals</operation>
            <value>Backup Customer Service Rep</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Account_Team_Proxy__c.Flag_for_Delete__c</field>
            <operation>equals</operation>
            <value>false</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Team_Proxy__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_1_Change_Request__c</fullName>
        <label>Bill To Address 1 Change Request</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_1__c</fullName>
        <label>Address Line 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_2_Change_Request__c</fullName>
        <inlineHelpText>Type &apos;REMOVE&apos; to nullify Bill To Address 2.</inlineHelpText>
        <label>Bill To Address 2 Change Request</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_2__c</fullName>
        <label>Address Line 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_3_Change_Request__c</fullName>
        <inlineHelpText>Type &apos;REMOVE&apos; to nullify Bill To Address 3.</inlineHelpText>
        <label>Bill To Address 3 Change Request</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_3__c</fullName>
        <label>Address Line 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bill To Address Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_To_Attention__c</fullName>
        <label>Bill To Attention</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_City_Change_Request__c</fullName>
        <label>Bill To City Change Request</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_City__c</fullName>
        <label>Bill To City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Country_Change_Request__c</fullName>
        <label>Bill To Country Change Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>